--- a/style.css
+++ b/style.css
@@ -1,141 +1,153 @@
-
-.container>div {
-    justify-content: center;
-    flex-direction: column;
+.container > div {
+  justify-content: center;
+  flex-direction: column;
 }
 
 .form-group {
-    margin-top: 5rem;
+  margin-top: 5rem;
 }
 
 .todo-text {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-weight: 400;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-weight: 600;
+  text-decoration: none;
 }
 
 .todo-list {
-    width:100%;
-    min-height: 50rem;
+  width: 100%;
+  min-height: 50rem;
 }
 
-.todo-list>h1 {
-    padding: 2rem 0 3rem 2rem;
+.todo-list > h1 {
+  padding: 2rem 0 3rem 2rem;
 }
 
-.done-todo-item, .modify-todo-item, .delete-todo-item {
-    border-radius: 10%;
-    justify-content: flex-end;
+.done-todo-item,
+.modify-todo-item,
+.delete-todo-item {
+  border-radius: 10%;
+  justify-content: flex-end;
 }
 
 li {
-    flex-direction: row;
+  flex-direction: row;
 }
 
 /* Nuevas lineas agregadas*/
 
 body {
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    background: #fc0;
-    font-family: 'Lato', sans-serif;
-    overflow: hidden;
-  }
-  .head-title {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-bottom: 2px solid black
-  }
-  .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start; 
-    height: 90vh;
-    background: #2980B9;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #FFFFFF, #6DD5FA, #2980B9);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #FFFFFF, #6DD5FA, #2980B9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    padding-top: 30px;
-  }
-  .entry {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 40%;
-    background: #fc0;
-    margin-bottom: 100px;
-    height: 20vh;
-    box-shadow: 3px 3px 2px gray;
-  }
-  .list {
-    width: 40%;
-    background: #f7f7f7;
-    color: white;
-    box-shadow: 3px 3px 2px gray;
-  }
-  ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
-  li {
-    display: flex;
-    align-items: center;
-    color: #666;
-    transition: all 0.3s;
-    cursor: pointer;
-    padding: 10px;
-  }
-  li:nth-child(2n) {
-    background: #fff;
-  }
-  .completed {
-    text-decoration: line-through;
-    color: black;
-  }
-  .fa-plus-circle {
-    width: 50px;
-    float: right;
-  }
-  input {
-    width: 100%;
-    outline: none;
-    font-size: 18px;
-    background: #f7f7f7;
-    border: none;
-    padding: 13px 13px 13px 20px;
-    box-sizing: border-box;
-    border: 3px solid rgba(0,0,0,0);
-  }
-  input:focus {
-    background: #fff;
-    border: 3px solid #2890b9;
-    outline: none;
-  }
-  .entry h1 {
-    margin: 0;
-    padding: 10px 20px;
-    text-transform: uppercase;
-    font-weight: 400;
-    font-size: 24px;
-    width: 80%;
-  }
-  li:hover span {
-    width: 40px;
-    opacity: 1;
-  }
-  span {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #e74c3c;
-    height: 40px;
-    margin-right: 20px;
-    color: white;
-    width: 0;
-    font-size: 40px;
-    transition: all 0.3s;
-    opacity: 0;
-  }
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  background: #fc0;
+  font-family: "Lato", sans-serif;
+  overflow: hidden;
+}
+.head-title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 2px solid black;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  height: 90vh;
+  background: #2980b9; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #ffffff,
+    #6dd5fa,
+    #2980b9
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #ffffff,
+    #6dd5fa,
+    #2980b9
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  padding-top: 30px;
+}
+.entry {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 40%;
+  background: #fc0;
+  margin-bottom: 100px;
+  height: 20vh;
+  box-shadow: 3px 3px 2px gray;
+}
+.list {
+  width: 40%;
+  background: #f7f7f7;
+  color: white;
+  box-shadow: 3px 3px 2px gray;
+}
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+li {
+  display: flex;
+  align-items: center;
+  color: #666;
+  transition: all 0.3s;
+  cursor: pointer;
+  padding: 10px;
+}
+li:nth-child(2n) {
+  background: #fff;
+}
+.completed {
+  text-decoration: line-through;
+  color: black;
+}
+.fa-plus-circle {
+  width: 50px;
+  float: right;
+}
+input {
+  width: 100%;
+  outline: none;
+  font-size: 18px;
+  background: #f7f7f7;
+  border: none;
+  padding: 13px 13px 13px 20px;
+  box-sizing: border-box;
+  border: 3px solid rgba(0, 0, 0, 0);
+}
+input:focus {
+  background: #fff;
+  border: 3px solid #2890b9;
+  outline: none;
+}
+.entry h1 {
+  margin: 0;
+  padding: 10px 20px;
+  text-transform: uppercase;
+  font-weight: 400;
+  font-size: 24px;
+  width: 80%;
+}
+li:hover span {
+  width: 40px;
+  opacity: 1;
+}
+span {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #e74c3c;
+  height: 40px;
+  margin-right: 20px;
+  color: white;
+  width: 0;
+  font-size: 40px;
+  transition: all 0.3s;
+  opacity: 0;
+}
